Fix: changed height on jphistory so not too much blank space at the bottom of section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,7 +135,7 @@ main {
 }
 #jphistory {
     background: url('../images/jphistory.png') no-repeat center top;    
-    height: 100vh;
+    height: 80vh;
     margin-top: 20px;
    
 }
